[package]
name = "da-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
ethers = {version = "2.0", features = ["abigen"] }
eyre = "0.6"
tonic = "0.12"
prost = "0.13"
url = { version = "2.4", default-features = false }
reqwest = {version = "0.11", features = ["json"]}
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
log4rs =  { version = "1.3.0", features = ["background_rotation", "gzip"] }
prometheus = "0.13"
prometheus_exporter = "0.8.5"
lazy_static = "1.5.0"

[build-dependencies]
tonic-build = { version="0.12", features = ["prost"] }
